...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/Temperature"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin_cardview"
        card_view:cardBackgroundColor="@color/CardViewColor"
        card_view:cardCornerRadius="@dimen/cardview_corner_radius"
        card_view:cardUseCompatPadding="true">


        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="0dp"
            android:clickable="true"
            android:onClick="CloseFragment"
...
